fix about page and cursor remove on mobile

--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -52,6 +52,9 @@
         font-family: sans-serif;
       }
     }
+    .mailLink{
+      text-align: right;
+    }
   }
 
   .white-mode{
