--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -52,6 +52,12 @@ body{
 @include scrollbars(.5em,crimson ,black);
 
 //Responsive
-@media all and (max-width: 1024px) {   }
-@media all and (max-width: 839px) {   }
+@media all and (max-width: 1024px) {
+
+}
+@media all and (max-width: 839px) {
+  #cursor{
+    display: none;
+  }
+}
 @media all and (max-width: 480px) {   }
